Conectando Js con HTML

--- a/Ejemplo/index.html
+++ b/Ejemplo/index.html
@@ -3,31 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Curso de Js</title>
 </head>
 <body>
-    <h1>Mi primera calculadora</h1> <!-- Título agregado -->
-    <h1>Erick Del Piero Y Daniel</h1>
-    <div class="calculadora">
-        <div id="display" class="display">0</div>
-        <button class="btn" onclick="presionarNumero('1')">1</button>
-        <button class="btn" onclick="presionarNumero('2')">2</button>
-        <button class="btn" onclick="presionarNumero('3')">3</button>
-        <button class="btn" onclick="presionarNumero('4')">4</button>
-        <button class="btn" onclick="presionarNumero('5')">5</button>
-        <button class="btn" onclick="presionarNumero('6')">6</button>
-        <button class="btn" onclick="presionarNumero('7')">7</button>
-        <button class="btn" onclick="presionarNumero('8')">8</button>
-        <button class="btn" onclick="presionarNumero('9')">9</button>
-        <button class="btn" onclick="presionarNumero('0')">0</button>
-        <button class="btn" onclick="operacion('+')">+</button>
-        <button class="btn" onclick="operacion('-')">-</button>
-        <button class="btn" onclick="operacion('*')">*</button>
-        <button class="btn" onclick="operacion('/')">/</button>
-        <button class="btn" onclick="calcular()">=</button>
-        <button class="btn" onclick="limpiar()">C</button>
-    </div>
-    <script src="script.js"></script>
+    <h1>Manipulación del DOM Básico</h1> <!-- Título agregado -->
+        
+    <p>Soy el primer parrafo</p>
+    <p class="ColorRojo">Soy el contenido del texto</p>
+    <p id="Final">Soy el párrafo final</p>
+    <input placeholder="Escribe un valor">
+
+    <script src="script.js"></script>   //Esta etiqueta nos deja escribir código Js
 </body>
 </html>
