Leyendo HTML desde JavaScript

--- a/Ejemplo/index.html
+++ b/Ejemplo/index.html
@@ -13,6 +13,6 @@
     <p id="Final">Soy el párrafo final</p>
     <input placeholder="Escribe un valor">
 
-    <script src="script.js"></script>   //Esta etiqueta nos deja escribir código Js
+    <script src="script.js"></script>   <!Esta etiqueta nos deja escribir código Js
 </body>
 </html>
