Escribiendo HTML desde JavaScript

--- a/Ejemplo/index.html
+++ b/Ejemplo/index.html
@@ -6,7 +6,7 @@
     <title>Curso de Js</title>
 </head>
 <body>
-    <h1>Manipulación del DOM Básico</h1> <!-- Título agregado -->
+    <h1 class="Verde" atributo="Atributo del Titulo">Manipulación del DOM Básico</h1> <!-- Título agregado -->
         
     <p>Soy el primer parrafo</p>
     <p class="ColorRojo">Soy el contenido del texto</p>
