Eventos Js: Interactundo con usuarios

--- a/Ejemplo/index.html
+++ b/Ejemplo/index.html
@@ -8,10 +8,11 @@
 <body>
     <h1 class="Verde" atributo="Atributo del Titulo">Manipulación del DOM Básico</h1> <!-- Título agregado -->
         
-    <p>Soy el primer parrafo</p>
-    <p class="ColorRojo">Soy el contenido del texto</p>
-    <p id="Final">Soy el párrafo final</p>
-    <input placeholder="Escribe un valor">
+    <input id="Calculo1" placeholder="Escribe el valor 'x'">
+    <input id="Calculo2" placeholder="Escribe el valor 'y'">
+    <button id="btnSumar" onclick="Click()">Suma</button>
+
+    <p id="Resultado"></p>
 
     <script src="script.js"></script>   <!Esta etiqueta nos deja escribir código Js
 </body>
